Add Levelsystem for future mechanics